# learning_opengl

./: consts.py  handle_inputs.py  main.py  pyproject.toml
